# cmsis5-device-m

./: CMakeLists.txt
